# agenthicc

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  coverage.json  llms-full.txt  llms.txt  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: codeql.yml  docs.yml  lint.yml  stale.yml  tests.yml
docs/: contributing.md  index.md  tui-architecture.md
docs/guides/: agents.md  architecture.md  background-sessions.md  commands.md  configuration.md  hooks.md  memory.md  plugins.md  project-bootstrap.md  quickstart.md  security.md  testing.md  tools.md  tui.md  type-safety.md  workflows.md
docs/reference/: api.md  cli.md  communication-tools.md  index.md  kernel.md  storage.md  type-safety-baseline.json  workflow-review.md
knowledge/: app-state.md  chevron-rendering-paths.md  commands-plugin.md  lauren-ai-tool-context-injection.md  skills-system.md  tool-system.md  workflows-and-modes.md  workflows-modes-plugins.md
prds/: README.md  ai-coding-agent-ux-research.md  claude_skills_research_report.md  component-inventory.md  inline-rendering-technical-research.md  non-alternate-screen-architecture.md  prd-01-appstate-and-event-system.md  prd-02-intent-and-workflow-engine.md  prd-03-agent-runtime-and-communication.md  prd-04-tool-execution-and-hooks.md  prd-05-memory-architecture.md  prd-06-tui-and-observability.md  prd-07-configuration-and-security.md  prd-08-testing-strategy.md  prd-09-rich-tui.md  prd-10-input-bar.md  prd-100-code-plan-architecture.md  prd-100-questions-overlay.md  prd-101-memory-layers.md  prd-101-workflow-graph-refactor.md  prd-102-conversation-integrity.md  prd-103-workflow-extensibility-revamp.md  prd-104-default-global-skills-bootstrap.md  prd-105-cross-platform-terminal-capabilities.md  prd-106-windows-terminal-backend.md  prd-107-turn-recovery.md  prd-108-http-timeout-safety.md  prd-109-case-insensitive-mentions.md  prd-11-oauth-and-ads.md  prd-110-workflow-runner-dispatch.md  prd-111-workflow-params.md  prd-112-workflow-package-structure.md  prd-113-config-extends.md  prd-114-composite-workflows.md  prd-115-phase-model-override.md  prd-116-remove-workflow-definition.md  prd-117-permanent-error-early-exit.md  prd-118-workflow-phase-model-display.md  prd-119-conversation-compaction.md  prd-12-mcp-integration.md  (+117 more)
prds/implementation/: agent-activity-prd.md  application-architecture-prd.md  component-implementation-prd.md  diff-viewer-prd.md  keyboard-ux-prd.md  master-execution-prd.md  non-alternate-screen-prd.md  session-persistence-prd.md  tool-execution-prd.md  transcript-system-prd.md
scripts/: type_audit.py
skills/: README.md
skills/extending-with-hooks/: SKILL.md
skills/headless-api/: SKILL.md
skills/running-the-tui/: SKILL.md
skills/testing-agenthicc/: SKILL.md
skills/using-memory/: SKILL.md
skills/writing-agents/: SKILL.md
src/agenthicc/: __main__.py  ads.py  agent_tools.py  auth.py  config.py  conversation_store.py  plugin.py  project_bootstrap.py  reactive.py  security.py  sessions.py  types.py
src/agenthicc/agents/: __init__.py  builtin.py  plugin.py  registry.py
src/agenthicc/api/: __init__.py  server.py
src/agenthicc/background/: __init__.py  coverage_gate.py  integration.py  model.py  settings.py  store.py  supervisor.py  worker.py
src/agenthicc/cli/: auth.py  config.py  context.py  parser.py  registry.py
tests/: conftest.py  conftest_cassette.py  test_cli.py  test_notifications.py
tests/e2e/: test_agent_runner_e2e.py  test_api_ws.py  test_argon2_scenario.py  test_background_sessions_e2e.py  test_busy_commands_e2e.py  test_commands_e2e.py  test_fs_tools_e2e.py  test_live_token_display.py  test_mcp_e2e.py  test_mention_agent_runner_e2e.py  test_mention_e2e.py  test_menu_e2e.py  test_mode_e2e.py  test_new_tools_e2e.py  test_skill_trigger_e2e.py  test_status_bar_pyte.py  test_stream_renderer_e2e.py  test_textual_agent_e2e.py  test_trigger_e2e.py  test_tui_pyte.py  test_tui_revamp_e2e.py  test_workflow_graph_e2e.py  test_workflow_runner_e2e.py
tests/integration/: conftest.py  test_api.py  test_app_integration.py  test_artifact_sharing.py  test_background_sessions.py  test_busy_commands_integration.py  test_cassette_replay.py  test_commands_integration.py  test_event_processor.py  test_exec_tools_integration.py  test_executor_with_hooks.py  test_fs_backend_integration.py  test_fs_tools_integration.py  test_git_tools_integration.py  test_inline_renderer_pipeline.py  test_input_bar_integration.py  test_mcp_registry.py  test_mention_integration.py  test_menu_integration.py  test_mode_integration.py  test_plugin_integration.py  test_project_bootstrap.py  test_runtime_cycle.py  test_skills_integration.py  test_stream_renderer_integration.py  test_streaming_pipeline.py  test_tool_executor_integration.py  test_trigger_integration.py  test_tui_pipeline.py  test_tui_revamp_integration.py  test_workflow_executor.py  test_workflow_graph_runner.py  test_workflow_modify.py  test_workflow_runner_integration.py
tests/unit/: test_ads.py  test_ads_extended.py  test_agent_config.py  test_agent_permissions.py  test_agent_pool.py  test_agent_turn_tool_ui.py  test_agents_registry_coverage.py  test_app_coverage.py  test_appender_tool_collapse.py  test_appstate_reducers.py  test_auth.py  test_auth_extended.py  test_background_edges.py  test_background_remaining_coverage.py  test_background_sessions.py  test_background_worker_coverage.py  test_builtin_modes.py  test_busy_command_policy.py  test_busy_commands_tui.py  test_cli_command_surfaces.py  test_code_plan_runtime_coverage.py  test_comm_tools.py  test_command_lifecycle.py  test_command_modals.py  test_command_plugins.py  test_command_reload.py  test_commands_cli_coverage.py  test_commands_coverage.py  test_compactor.py  test_composite_workflows.py  test_config.py  test_config_extends.py  test_config_menu.py  test_config_prd21.py  test_config_storage.py  test_conversation_journal.py  test_coverage_boost.py  test_coverage_boost2.py  test_coverage_boost3.py  test_coverage_final.py  (+145 more)
(+223 files in other folders)
