[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "agenthicc"
version = "0.1.0"
description = "State-driven agent operating system for autonomous software engineering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lauren-ai[all]",
    "anyio>=4.0",
    "typing-extensions>=4.11",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12.0",
    "httpx>=0.27",
    "textual>=0.56.0",
    "wcwidth>=0.2.13",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
cloud = ["aiohttp>=3.9", "keyring>=25.0"]
speedups = ["textual-speedups"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "pyte>=0.8",
    "httpx>=0.27",
]

[project.scripts]
agenthicc = "agenthicc.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
lauren-ai = { path = "../lauren-all/lauren-ai", editable = true }
lauren = { path = "../lauren-all/lauren-framework", editable = true }

[tool.uv.workspace]
members = [
    "python-password-generator",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests (fast, no external deps)",
    "integration: integration tests (real event processor)",
    "e2e: end-to-end tests (PTY, API clients)",
]
timeout = 60

[tool.coverage.run]
source = ["agenthicc"]
omit = [
    "tests/*",
    # Platform-specific code unreachable without target platform
    "*/tools/fs/pyodide.py",        # Pyodide/browser-only
    "*/tools/fs/windows.py",        # Windows-only
    "*/tools/outlook/win32_backend.py",  # Windows COM/pywin32 only
    # Auto-generated or trivial re-export files covered by other tests
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
