[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "agenthicc"
version = "0.1.0"
description = "State-driven agent operating system for autonomous software engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lauren-ai[anthropic,openai,ollama,litellm]",
    "anyio>=4.0",
    "typing-extensions>=4.11",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
cloud = ["aiohttp>=3.9", "keyring>=25.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "pyte>=0.8",
    "httpx>=0.27",
]

[project.scripts]
agenthicc = "agenthicc.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

# Develop against the local lauren-ai checkout (mirrors the runtime
# `uv run --index lauren-ai=file://../lauren-all/lauren-ai` workflow) so source
# edits to the framework take effect without rebuilding/publishing a wheel.
# [tool.uv.sources]
# lauren-ai = { path = "../lauren-all/lauren-ai", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests (fast, no external deps)",
    "integration: integration tests (real event processor)",
    "e2e: end-to-end tests (PTY, API clients)",
]
timeout = 60

[tool.coverage.run]
source = ["agenthicc"]
omit = ["tests/*"]

[dependency-groups]
dev = [
    "keyring>=25.7.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# cbreak_reader.py uses table-style one-liner key dispatch (if b == b"\x03":  return ...)
"src/agenthicc/tui/cbreak_reader.py" = ["E701"]
