[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "agenthicc"
version = "0.1.0"
description = "State-driven agent operating system for autonomous software engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lauren-ai[anthropic,openai,ollama,litellm]",
    "anyio>=4.0",
    "typing-extensions>=4.11",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
cloud = ["aiohttp>=3.9", "keyring>=25.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "pyte>=0.8",
    "httpx>=0.27",
]

[project.scripts]
agenthicc = "agenthicc.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

# Develop against the local lauren-ai checkout (mirrors the runtime
# `uv run --index lauren-ai=file://../lauren-all/lauren-ai` workflow) so source
# edits to the framework take effect without rebuilding/publishing a wheel.
# [tool.uv.sources]
# lauren-ai = { path = "../lauren-all/lauren-ai", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests (fast, no external deps)",
    "integration: integration tests (real event processor)",
    "e2e: end-to-end tests (PTY, API clients)",
]
timeout = 60

[tool.coverage.run]
source = ["agenthicc"]
omit = ["tests/*"]

[dependency-groups]
dev = [
    "keyring>=25.7.0",
    "mypy>=1.15,<2",
    "types-PyYAML>=6.0",
    "nox>=2026.7.11",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
packages = ["agenthicc"]
show_error_codes = true
pretty = false
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

# These imports are optional platform/provider boundaries. Each module still
# has to expose a typed local adapter; this override only prevents an absent
# optional installation from turning the whole package into an import error.
[[tool.mypy.overrides]]
module = [
    "agenthicc.tools.fs.pyodide",
    "agenthicc.tools.fs.s3",
    "agenthicc.tools.mcp",
    "agenthicc.tools.outlook",
    "agenthicc.tools.outlook.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# cbreak_reader.py uses table-style one-liner key dispatch (if b == b"\x03":  return ...)
"src/agenthicc/tui/cbreak_reader.py" = ["E701"]
# These legacy compatibility modules are read-only in the shared workspace;
# their optional/type-only imports are intentionally retained for downstream
# annotation consumers.
"src/agenthicc/mentions/injector.py" = ["F401"]
"src/agenthicc/testing/mock_approval.py" = ["F401"]
"src/agenthicc/testing/recording_approval.py" = ["F821"]
"src/agenthicc/tools/http.py" = ["F821"]
"src/agenthicc/tui/runtime/replay.py" = ["F401"]
